--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width" />
         <meta name="description" content="Dungeons and Dragons community and content creators, from East Europe.">
 
+        <link rel="shortcut icon" href="assets/images/logo.ico" />
+
         <title>Average Adeventurers</title>
 
         <link href="https://fonts.googleapis.com/css?family=Germania+One&display=swap" rel="stylesheet">
