--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,17 @@
 
         <title>Average Adeventurers</title>
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141777870-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-141777870-1');
+        </script>
+
+
         <link href="https://fonts.googleapis.com/css?family=Germania+One&display=swap" rel="stylesheet">
         <link href="assets/stylesheets/main.css" rel="stylesheet" />
     </head>
